# hermetic-fhe

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: fhe_benchmark.rs
docs/: TESTING.md
proto/: fhe_service.proto
src/: lib.rs  main.rs
src/api/: mod.rs
src/crypto/: mod.rs
src/service/: fhe_service.rs  mod.rs
tests/: complex_operations_test.rs  crypto_test.rs  error_handling_test.rs  integer_test.rs  service_test.rs
