[package]
name = "hermetic-fhe"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A gRPC API for Fully Homomorphic Encryption using TFHE-rs"

[dependencies]
# Tonic for gRPC
tonic = { version = "0.10.0", features = ["tls"] }
prost = "0.12.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.14"

# TFHE-rs for Fully Homomorphic Encryption
tfhe = { version = "0.5.3", features = ["boolean", "shortint", "integer"] }

# Utility crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
anyhow = "1.0.75"
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.10.0"
